<resources>
    <string name="app_name">Convertisseur Distance</string>
    <string name="mesureConverti">Pied - Pouce - Centimetre</string>
    <string name="lgnPied">Pied : </string>
    <string name="lgnPouce">Pouce : </string>
    <string name="lgnCentimetre">Centimetre : </string>
    <string name="msgFin">Si vous souhaitez convertir une distance \nexprimée en centimetres \nIl ne faut pas saisir de pieds ni de pouces !</string>
    <string name="DescriptionRegle">Image d\'une règle</string>
    <string name="msgErreur">erreur saisie !</string>
</resources>
