<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:stretchColumns="1,2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@style/titre"
        android:text="@string/app_name" />

    <TextView
        style="@style/titre"
        android:text="@string/mesureConverti"/>

    <TableRow>
        <TextView
            style="@style/libelleButton"
            android:text="@string/lgnPied"
            />

        <EditText
            android:layout_span="2"
            android:id="@+id/etPied"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </TableRow>

    <TableRow>
        <TextView
            style="@style/libelleButton"
            android:text="@string/lgnPouce"
            />

        <EditText
            android:layout_span="2"
            android:id="@+id/etPouces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lgnCentimetre"
            android:textColor="@color/colorAccent"
            />

        <EditText
            android:layout_span="2"
            android:id="@+id/etCentimetre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </TableRow>

    <TableRow>

        <Button
            android:layout_column="1"
            android:id="@+id/btnCalculer"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="Calculer"/>

        <Button
            android:id="@+id/btnAnnuler"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="Annuler"/>
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/msgFin"/>

</TableLayout>